@@ -1,5 +1,8 @@
 ChangeLog for the Astro project.
 
+20210610:
+	* retrieve gain from camera
+
 20210607:
 	* get qhyccd driver to work (InitQHYCCD), still open are window
 	  heating
